<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/holo_blue_dark"
        android:gravity="center"
        android:text="@string/case_comprehensive_config_des"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:baselineAligned="false" >

        <LinearLayout
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical" >

            <CheckBox
                android:id="@+id/enable_version"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/case_comprehensive_config_version" />
            
            <CheckBox
                android:id="@+id/enable_spdif"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/case_comprehensive_config_spdif" />

            <CheckBox
                android:id="@+id/enable_wifi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/case_comprehensive_config_wifi" />
            
            <CheckBox
                android:id="@+id/enable_elthernet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/case_comprehensive_config_elthernet" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical" >
            
            <CheckBox
                android:id="@+id/enable_video"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" 
                android:text="@string/case_comprehensive_config_video" />

            <CheckBox
                android:id="@+id/enable_threedimensional"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/case_comprehensive_config_threedimensional" />
                
           <CheckBox
                android:id="@+id/enable_memory"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/case_comprehensive_config_memory" />


            <CheckBox
                android:id="@+id/enable_cvbs"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/case_comprehensive_config_cvbs" />
        </LinearLayout>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/holo_blue_light" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/holo_blue_dark"
        android:gravity="center"
        android:text="@string/case_comprehensive_config_passable"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbarSize="0dip" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/passable_version"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/case_comprehensive_config_passable_version"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <Button
                    android:id="@+id/auto_get"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/case_comprehensive_config_passable_version_detail"
                    android:textColor="@android:color/holo_green_light" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/passable_fireware"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cse_comprehensive_config_passable_fireware"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <EditText
                    android:id="@+id/edit_fireware"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="text" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/passable_memory"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/case_comprehensive_config_passable_memory"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <EditText
                    android:id="@+id/edit_min_memory"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/case_comprehensive_config_passable_memory_min"
                    android:inputType="number" >
                </EditText>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/case_comprehensive_config_passable_mb"
                    android:textAppearance="?android:attr/textAppearanceSmall" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/passable_wifi"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/case_wifi_strength"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <EditText
                    android:id="@+id/edit_max_rssi"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/case_wifi_strength_default"
                    android:inputType="number" >
                </EditText>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/case_comprehensive_config_passable_wifi_db"
                    android:textAppearance="?android:attr/textAppearanceSmall" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>