<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/config_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/case_video_config_select"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <Button
            android:id="@+id/config_btn_select"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/case_video_config_btn_select" />

        <Button
            android:id="@+id/config_btn_test"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/case_video_config_test" />

        <Button
            android:id="@+id/config_clear"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/case_video_config_reset" />

    </LinearLayout>

    <TextView
        android:id="@+id/config_path"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/case_video_config_none"
        android:textAppearance="?android:attr/textAppearanceMedium" />

</LinearLayout>