<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <ListView
        android:id="@+id/result_list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/diviser_1"
        android:layout_alignParentTop="true" >
    </ListView>
    
    <View
        android:id="@+id/diviser_1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_above="@+id/linearLayout1"
        android:background="@android:color/holo_blue_light" />

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_alignParentBottom="true" >

        <Button
            android:id="@+id/uninstall"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:gravity="center"
            style="?android:attr/buttonBarButtonStyle"
            android:text="@string/uninstall_bash" />
        
        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@android:color/holo_blue_light" />

        <Button
            android:id="@+id/recovery"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            style="?android:attr/buttonBarButtonStyle"
            android:text="@string/recovery" />
        
        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@android:color/holo_blue_light" />

        <TextView
            android:id="@+id/btn_exit"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            style="?android:attr/buttonBarButtonStyle"
            android:text="@string/result_exit" />
    </LinearLayout>

</RelativeLayout>